--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   
   <body>
     <h1>Hello World!</h1>
-    <p>test test test 123...</p>
-    <a href="./tmp.php"> test</a>
+    <p>test test test 123!!!</p>
+    <a href="tmp.php"> test</a>
   </body>
   
 </html>
