--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Hello World!</h1>
     <p>test test test 123!!!</p>
-    <a href="tmp.php"> test</a>
+    <a href="/p2.html"> test</a>
   </body>
   
 </html>
