--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<html>
-  
-  <head>
-  </head>
-  
-  <body>
-    <h1>Hello World!</h1>
-    <p>test test test 123!!!</p>
-    <a href="/p2.html"> test</a>
-  </body>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link href="test.css" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+
+    <div id="box"></div>
+    
+
+    <script>
+        $(document).ready( function() {
+            $('#box').click( function() {
+                $(this).hide();
+            });
+        })
+    </script>
+
+</body>
 </html>
